<resources>
    <string name="app_name">Indigo</string>
    <string name="newReg">Novo no Indigo ?</string>
    <string name="name">Nome:</string>
    <string name="password">Senha:</string>
    <string name="email">Email:</string>
    <string name="create_account">Criar Conta</string>
    <string name="welcome">Bem-vindo(a) ao Indigo</string>
    <string name="logout">Sair</string>
    <string name="account_settings">Configuração de Conta</string>
    <string name="all_users">Todos Usuários</string>
    <string name="create_new_account">Crie sua nova Conta!!!</string>
    <string name="loginStart">JÁ POSSUI SUA CONTA?</string>
    <string name="welcome_start">Bem Vindo ao Indigo Chat App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Olá, Eu estou usando Indigo App Chat!</string>
    <string name="trocar_status">TROCAR STATUS</string>
    <string name="trocar_imagem">TROCAR IMAGEM</string>
    <string name="display_nome">DISPLAY NOME</string>
    <string name="display_name">Display Name</string>
</resources>
