<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/default_avatar" />

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/display_nome"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/materialDesign5"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/trocar_status"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:backgroundTint="@color/materialDesign1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/trocar_imagem"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/default_status"
        android:textColor="@android:color/white" />

</RelativeLayout>